fixing spacing btwn items in approaching bus list

--- a/src/css/bustime.sass
+++ b/src/css/bustime.sass
@@ -1250,7 +1250,7 @@ button, .button
     display: flex
     flex-wrap: nowrap
     gap: .5em
-    padding: .25em 0
+    padding: .5em 0
     .bus
       width: 4.5em
       flex-grow: 0
